tests/specs/run/unstable/cron.out
error: Uncaught (in promise) TypeError: Deno.cron is not a function
Deno.cron();
     ^
    at file:///Users/ib/dev/deno/tests/specs/run/unstable/cron.ts:1:6

    info: Deno.cron() is an unstable API.
    hint: Run again with `--unstable-cron` flag to enable this API.
